fixed overflow x issue

--- a/hybridoo-themes/theme-alpha.css
+++ b/hybridoo-themes/theme-alpha.css
@@ -24,7 +24,8 @@ body {
     padding: 0 1rem;
     font-family: var(--body-font);
     font-size: var(--normal-font-size);
-    transition: .5s
+    transition: .5s;
+    overflow-x: hidden;
 }
 a {
     text-decoration: none
